<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="view"
            type="com.example.todolist_app.presentation.register.ui.RegisterUserFragment" />

        <variable
            name="viewModel"
            type="com.example.todolist_app.presentation.register.viewmodel.RegisterUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_camera"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/bg_camera"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:onClick="@{() -> view.checkPermission()}"
                android:src="@drawable/bg_oval_00b0f0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/photo_camera_white_24dp"
                app:layout_constraintBottom_toBottomOf="@id/bg_camera"
                app:layout_constraintDimensionRatio="6:1"
                app:layout_constraintEnd_toEndOf="@id/bg_camera"
                app:layout_constraintStart_toStartOf="@id/bg_camera"
                app:layout_constraintTop_toTopOf="@id/bg_camera" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_user_name"
            style="@style/TextView.Title.20_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_stroke_00b0f0_30dp"
            android:hint="@string/register_user_name_hint"
            android:paddingHorizontal="35dp"
            android:paddingVertical="20dp"
            android:text="@={viewModel.userName}"
            android:textColorHint="@color/color_bfbfbf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_camera" />

        <Button
            android:id="@+id/btn_user_birthday"
            style="@style/TextView.Title.20_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_stroke_00b0f0_30dp"
            android:gravity="center_vertical"
            android:hint="@string/register_user_birthday_hint"
            android:onClick="@{() -> view.showDatePickerDialog()}"
            android:paddingHorizontal="35dp"
            android:paddingVertical="20dp"
            android:text="@{viewModel.userBirthday}"
            android:textColorHint="@color/color_bfbfbf"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_user_name" />

        <Button
            android:id="@+id/btn_register"
            style="@style/TextView.Title.20_R"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_00b0f0_radius_30dp"
            android:onClick="@{() -> viewModel.validateInputData()}"
            android:paddingVertical="20dp"
            android:text="@string/register_user_register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
